--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -1,15 +1,127 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
+<%- include('./partials/head.ejs') %> 
+
+<style>
+  .nav-list{
+    list-style: none;
+    padding: 0;
+  }
+
+  .nav-item{
+    margin-bottom: 10px;
+    background-color: #3a86ff;
+    padding: 20px;
+    border-radius: 5px;
+    font-size: 18px;
+  }
+
+  .nav-item a{
+    color: #fff;
+    text-decoration: none;
+  }
+
+  .switch {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 25px;
+  }
+
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: -10px;
+    right: 0;
+    bottom: 0;
+    right: 20px;
+    width: 50px;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 20px;
+    width: 20px;
+    right: 28px;
+    left: 2px;
+    top: 2.5px;
+    background-color: white;
+    box-shadow: 4px 3px 10px 0px rgba(0, 0, 0, 0.047);
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+
+  input:checked + .slider {
+    background-color: #3a86ff;
+  }
+
+  input:focus + .slider {
+    box-shadow: 0 0 1px #3a86ff;
+  }
+
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+
+  .slider.round {
+    border-radius: 25px;
+  }
+
+  .slider.round:before {
+    border-radius: 50%;
+  }
+
+  .twod-status-label{
+    color: #3a86ff;
+    font-size: 18px;
+  }
+
+</style>
+
   <body>
-    <h1>Panel</h1>
-    <form action="/panel/logout" method="POST">
-      <button type="submit">logout</button>
-    </form>
+    <%- include('./partials/app_title.ejs') %> 
+
+    <div class="content">
+      <div style="display: flex; justify-content:space-between; align-items:center">
+        <h1 class="twod-status-label"><% if (isRunning) { %>
+           2D Running
+          <% } else { %>
+            2D Stopped
+          <% } %>  </h1>
+        <label class="switch">
+          <input type="checkbox" <% if (isRunning) { %>
+           checked
+          <% } %> >
+          <span class="slider round"></span>
+        </label>
+      </div>
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a href="/panel/modern">Modern & Internet</a>
+        </li>
+        <li class="nav-item" style="background-color: #2a9d8f">
+          <a href="/panel/3d">Myanmar 3D</a>
+        </li>
+        <li class="nav-item" style="background-color: #fda437">
+          <a href="/panel/btc">BTC</a>
+        </li>
+        <hr style="margin:20px 0">
+        <li class="nav-item">
+          <a href="/panel/btc">Page Marquees</a>
+        </li>
+      </ul>
+    </div>
+
   </body>
 </html>
