--- a/views/threed.ejs
+++ b/views/threed.ejs
@@ -32,6 +32,12 @@
   }
 </style>
   <body>
+     <div class="nav-bar">
+        <div>
+           <!-- <a class="threed-link" href="/3d">2D</a> -->
+        </div>
+        <button class="twod-link" onclick="location.href = '/';"><img src="schedule.png" alt="" /> 2D Live</button>
+    </div>
     <div class="top-div">
       <h1 class="last-twod" id="current-result"><%= latest.result %> </h1>
       <p class="last-update" id="current-update"><%= latest.date %></p>
@@ -51,9 +57,6 @@
         </div>
       </div>
     <% }) %>
-    </div>
-    <div class="action-div">
-      <button onclick="location.href = '/';"><img src="schedule.png" alt="" /> 2D Live</button>
     </div>
   </body>
 
