--- a/views/twod.ejs
+++ b/views/twod.ejs
@@ -17,6 +17,12 @@
   }
 </style>
   <body>
+     <div class="nav-bar">
+        <div>
+           <a class="threed-link" href="/3d">3D</a>
+        </div>
+        <button class="twod-link" onclick="location.href = '/';"><img src="schedule.png" alt="" /> 2D Live</button>
+    </div>
     <div class="twod-div">
     <% data.forEach(d => { %>
        <div class="first">
