--- a/public/style.css
+++ b/public/style.css
@@ -23,6 +23,51 @@ body {
   color: #ff006e;
 }
 
+.nav-bar {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.threed-link,
+.twod-link {
+  font-size: 20px;
+  text-decoration: none;
+  color: #fff;
+  font-weight: 500;
+  background: #2a9d8f;
+  padding: 5px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  box-shadow: 4px 3px 10px 0px rgba(0, 0, 0, 0.047);
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+.twod-link {
+  border: none;
+  outline: none;
+  box-shadow: none;
+  font-size: 15px;
+  color: #565656;
+  font-weight: 500;
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 34px;
+  margin-left: 10px;
+  padding: 0px 10px;
+  cursor: pointer;
+}
+
+.twod-link img {
+  width: 22px;
+  margin-right: 10px;
+}
+
 .top-div {
   display: flex;
   flex-direction: column;
