--- a/public/style.css
+++ b/public/style.css
@@ -5,9 +5,10 @@ body {
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
   background: #f5f9fc;
-  max-width: 390px;
+  max-width: 340px;
   margin: auto;
   padding-top: 30px;
+  padding-bottom: 10px;
   color: #808080;
 }
 
@@ -164,7 +165,7 @@ body {
 }
 
 .twod-title {
-  font-size: 12px;
+  font-size: 10px;
   margin: 0;
   padding: 0;
   margin-top: 10px;
@@ -173,7 +174,7 @@ body {
 .twod-set,
 .twod-value {
   margin-top: 8px;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 400;
 }
 
@@ -291,6 +292,9 @@ body {
 }
 
 @keyframes blinker {
+  30% {
+    opacity: 0.5;
+  }
   50% {
     opacity: 0;
   }
