--- a/views/index.ejs
+++ b/views/index.ejs
@@ -100,7 +100,23 @@
       </div>
     </div>
     <script>
-       function getLiveData(time) {
+
+      function compareTime(str1, str2){
+          if(str1 === str2){
+              return 0;
+          }
+          var time1 = str1.split(':');
+          var time2 = str2.split(':');
+          if(eval(time1[0]) > eval(time2[0])){
+              return true;
+          } else if(eval(time1[0]) == eval(time2[0]) && eval(time1[1]) > eval(time2[1])) {
+              return true;
+          } else {
+              return false;
+          }
+      }
+
+      function getLiveData(time) {
         let xmlHttp = null;
         xmlHttp = new XMLHttpRequest();
         xmlHttp.open("GET", "/api/live", false);
@@ -131,7 +147,7 @@
         }
       }
 
-       function getTodayData() {
+      function getTodayData() {
           let xmlHttp = null;
           xmlHttp = new XMLHttpRequest();
           xmlHttp.open("GET", "/api/today", false);
@@ -161,23 +177,53 @@
       }
 
 
+      function getYesterdayData() {
+          let xmlHttp = null;
+          xmlHttp = new XMLHttpRequest();
+          xmlHttp.open("GET", "/api/yesterday", false);
+          xmlHttp.send(null);
+          let data = JSON.parse(xmlHttp.response);
+          document.getElementById("noon-set").classList.remove("blink-me");
+          document.getElementById("noon-value").classList.remove("blink-me");
+          document.getElementById("evening-set").classList.remove("blink-me");
+          document.getElementById("evening-value").classList.remove("blink-me");
+          document.getElementById("current-result").innerText = data.twoD[1].result;
+          document.getElementById("current-update").innerText =  "Updated : " + data.twoD[1].date + " " + data.twoD[1].time;
+          document.getElementById("noon-set").innerText = data.twoD[0].set;
+          document.getElementById("noon-value").innerText =  data.twoD[0].value;
+          document.getElementById("noon-result").innerText = data.twoD[0].result;
+          document.getElementById("evening-set").innerText = data.twoD[1].set;
+          document.getElementById("evening-value").innerText =  data.twoD[1].value;
+          document.getElementById("evening-result").innerText = data.twoD[1].result;
+      }
+
+
       function init(){
+        let now = new Date().getHours() + ":" + new Date().getMinutes();
+
         let todayData = getTodayData();
         if(todayData.twoD.length < 1 ){
-          getLiveData('noon');
+          if(compareTime(now,"9:00") && !compareTime(now,"12:01")){
+            getLiveData('noon');
+          }else{
+            getYesterdayData();
+          }
         }else if(todayData.twoD.length === 1){
+          document.getElementById("current-result").innerText = todayData.twoD[0].result;
+          document.getElementById("current-update").innerText = "Updated : " + todayData.twoD[0].date + " " + todayData.twoD[0].time;
           document.getElementById("noon-set").innerText = todayData.twoD[0].set;
           document.getElementById("noon-value").innerText =  todayData.twoD[0].value;
           document.getElementById("noon-result").innerText = todayData.twoD[0].result;
-          getLiveData('evening');
+          console.log(compareTime(now,"11:36") && !compareTime(now,"16:30"));
+          if(compareTime(now,"14:00") && !compareTime(now,"16:30")){
+            getLiveData('evening');
+          }
         }else if(todayData.twoD.length > 2){
-          console.log('all done');
           getFinalData();
         }
       }
 
 
-    
       getTodayData();
 
       setInterval(() => {
