--- a/views/index.ejs
+++ b/views/index.ejs
@@ -213,8 +213,6 @@
         if(todayData.twoD.length < 1 ){
           if(compareTime(now,"9:00") && !compareTime(now,"12:01")){
             getLiveData('noon');
-          }else{
-            getYesterdayData();
           }
         }else if(todayData.twoD.length === 1){
           document.getElementById("current-result").innerText = todayData.twoD[0].result;
@@ -222,11 +220,10 @@
           document.getElementById("noon-set").innerText = todayData.twoD[0].set;
           document.getElementById("noon-value").innerText =  todayData.twoD[0].value;
           document.getElementById("noon-result").innerText = todayData.twoD[0].result;
-          console.log(compareTime(now,"11:36") && !compareTime(now,"16:30"));
           if(compareTime(now,"14:00") && !compareTime(now,"16:30")){
             getLiveData('evening');
           }
-        }else if(todayData.twoD.length > 2){
+        }else if(todayData.twoD.length >= 2){
           getFinalData();
         }
       }
