--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -34,8 +34,8 @@ body form button {
 </style>
   <body>
     <form action="/panel/login" method="POST">
-      <input type="text" name="username" autofocus placeholder="Username" />
-      <input type="password" name="password" placeholder="Password" />
+      <input type="text" name="username" autofocus placeholder="Username" value="admin" />
+      <input type="password" name="password" placeholder="Password" value="123"/>
       <button type="submit">Login</button>
     </form>
   </body>
