--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -93,20 +93,10 @@
     <%- include('./partials/app_title.ejs') %> 
 
     <div class="content">
-      <div style="display: flex; justify-content:space-between; align-items:center">
-        <h1 class="twod-status-label"><% if (isRunning) { %>
-           2D Running
-          <% } else { %>
-            2D Stopped
-          <% } %>  </h1>
-        <label class="switch">
-          <input type="checkbox" <% if (isRunning) { %>
-           checked
-          <% } %> >
-          <span class="slider round"></span>
-        </label>
-      </div>
       <ul class="nav-list">
+        <li class="nav-item">
+          <a href="/panel/2d">2D Results</a>
+        </li>
         <li class="nav-item">
           <a href="/panel/modern">Modern & Internet</a>
         </li>
