--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -94,9 +94,9 @@
 
     <div class="content">
       <ul class="nav-list">
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a href="/panel/2d">2D Results</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a href="/panel/modern">Modern & Internet</a>
         </li>
@@ -106,10 +106,10 @@
         <li class="nav-item" style="background-color: #fda437">
           <a href="/panel/btc">BTC</a>
         </li>
-        <hr style="margin:20px 0">
+        <!-- <hr style="margin:20px 0">
         <li class="nav-item">
           <a href="/panel/btc">Page Marquees</a>
-        </li>
+        </li> -->
       </ul>
     </div>
 
