--- a/public/style.css
+++ b/public/style.css
@@ -310,3 +310,20 @@ body {
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
+
+.alert-div {
+  margin: 10px 0px;
+  border-radius: 10px;
+  padding: 1px 10px;
+  background: #ffc57d;
+  color: #565656;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  font-size: 14px;
+}
+
+.alert-div p {
+  padding: 0;
+}
