--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,11 @@
       <h1 class="last-twod" id="current-result">--</h1>
       <p class="last-update" id="current-update">Data Loading ... </p>
     </div>
+  <% if (holiday) { %>
+     <div class="alert-div">
+      <p> 2D Closed ❌ <%= whyholiday %> </p>
+    </div>
+  <% } %>
     <div class="twod-div">
       <div class="first">
         <p class="twod-time">12:01 PM</p>
@@ -93,6 +98,7 @@
         </div>
       </div>
     </div>
+
     <script>
 
       function compareTime(str1, str2){
@@ -172,7 +178,6 @@
           document.getElementById("evening-result").innerText = data.twoD[1].result;
       }
 
-
       function getYesterdayData() {
           let xmlHttp = null;
           xmlHttp = new XMLHttpRequest();
@@ -196,16 +201,17 @@
 
       function init(){
         let now = new Date().getHours() + ":" + new Date().getMinutes();
-
         let todayData = getTodayData();
-
-        
+        let isHoliday = '<%= holiday ;%>';
+        let whyHoliday = '<%= whyholiday ;%>';
         document.getElementById("morning-mod").innerText = todayData.modNet[0] ? todayData.modNet[0].mod : "--";
         document.getElementById("morning-net").innerText = todayData.modNet[0] ? todayData.modNet[0].net : "--";;
         document.getElementById("noon-mod").innerText = todayData.modNet[1] ? todayData.modNet[1].mod : "--";;
         document.getElementById("noon-net").innerText = todayData.modNet[1] ? todayData.modNet[1].net : "--";;
 
-
+        if(isHoliday){
+          document.getElementById("current-update").innerText ='No Data Available';
+        }else{
         if(todayData.twoD.length < 1 ){
           if(compareTime(now,"9:00") && !compareTime(now,"12:01")){
             getLiveData('noon');
@@ -225,6 +231,9 @@
         }else if(todayData.twoD.length >= 2){
           getFinalData();
         }
+        }
+
+        
       }
 
       setInterval(() => {
